# smelt

./: Cargo.toml  build.rs
proto/: node.proto  smelt.proto
src/: main.rs
src/server/: mod.rs  server.rs
src/server/raft/: mod.rs  raft.rs
