[package]
name = "smelt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smelt"
path = "src/main.rs"

[[bin]]
name = "smeltctl"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
